[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgi_aws"
description = "Build API with ASGI in AWS Lambda with API Gateway HTTP API or REST API, or with Function URL ✨"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Yasser Tahiri", email = "hello@yezz.me" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]

dependencies = [
    "typing-extensions >=3.7.4,<4.5.0",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yezz123/asgi-aws"
Funding = 'https://github.com/sponsors/yezz123'

[project.optional-dependencies]
lint = [
    "pre-commit==2.20.0",
    "mypy==0.991",
]
test = [
    "pytest==7.1.2",
    "pytest-asyncio == 0.18.3",
    "codecov==2.1.12",
    "pytest-cov==3.0.0",
    "fastapi >=0.65.2,<0.78.0",
    "pydantic==1.9.1",
    "python-multipart"
]


[tool.hatch.version]
path = "asgi_aws/__init__.py"